--- a/css/media.css
+++ b/css/media.css
@@ -29,7 +29,7 @@
 .get-started li > p {  font-size: 16px;}
 .integration-img-block {top: 279px; height: 28%;}
 .checkout-solution {  padding-top: 37px;   padding-bottom: 80px;}
-.checkout-img-block {left: 0.6%;  top: 5%;}
+.checkout-img-block {left: -1%;  top: 5%;}
 .target-text + img {right: 0.8%;}
 .currenci-icon {   height: 50px;   width: 50px;   background-size: auto 100%;}
 .instant-curr { padding-bottom: 100px;}
@@ -41,9 +41,12 @@
 .currenci::after {top: 25px;}
 .dotted {  width: 8%;}
 .globe-wrap svg {top: -127px;left: 40px;}
+.integration-img-block img:nth-child(6) {  left: -44%;   top: -102%;   width: 207%;}
 
 }
-@media only screen and (max-width : 1050px){.dotted {  width: 1%;}}
+@media only screen and (max-width : 1050px){.dotted {  width: 1%;}
+.integration-img-block img:nth-child(6) {top: -90%;}
+}
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 991px) {
@@ -71,10 +74,10 @@
 .percentage + p {  font-size: 14px;   margin-top: 12px;  line-height: 1.5;}
 .target-section::before {width: 31.15%;}
 .target-section::after {width: 40%;}
-.currencies h3 {  font-size: 28px;   margin-bottom: 33px;}
+.currencies h3 {  font-size: 28px;   margin-bottom: 33px;text-align: center;}
 .currencies-points .ccontainer {  width: 100%;    max-width: 500px;}
 .currenci:nth-child(6), .currenci:last-child {  margin-right: 0;}
-.currenci {  margin-right: 35px;   margin-bottom: 20px;}
+.currenci {  margin-right: 35px;   margin-bottom: 20px;width: 50px;text-align: center;}
 .currenci:nth-child(6)::after {  content: none;}
 .dotted {   display: none;}
 .currencies .rrow {    -webkit-flex-wrap: wrap;    -ms-flex-wrap: wrap;    flex-wrap: wrap;  -webkit-box-pack: center;  -webkit-justify-content: center;  -ms-flex-pack: center;  justify-content: center;}
@@ -90,16 +93,13 @@
 footer {  padding-top: 24px;}
 .globe-wrap svg {top: -91px;left: 30px;}
 .navbar-header {    float: left;}
-
-
-
-
-
-
-
+.integration-img-block {  height: 35%;}
 }
 
-
+@media only screen and (max-width : 800px){
+	.integration-img-block {  top: 180px;   height: 47%;  width: 42.3%;  right: 11%;}
+	.integration-img-block img:nth-child(6) { top: -68%;}
+}
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 767px) {
@@ -149,6 +149,7 @@ section {  padding: 0 15px;}
 .currencies {   width: 370px;  margin: 0 auto;   margin-top: 50px;}
 .navbar-header {  float: none;}
 .head-btns {  text-align: center;}
+.get-started {background-image: none;}
 
 
 }
@@ -159,7 +160,7 @@ section {  padding: 0 15px;}
 .links-item a,.links-item > .title {  font-size: 12px;}
 .currencies h3 {   font-size: 23px;}
 .currenci-icon {  height: 50px;   width: 50px;}
-.currencies {  width: 300px;}
+.currencies {  width: 300px;margin-top: 60px;}
 .currenci-icon {  height: 55px;   width: 55px;}
 .currenci:nth-child(4)::after, .currenci:nth-child(8)::after { content: '';}
 .currenci:nth-child(4), .currenci:nth-child(8){  margin-right: 30px;}
@@ -167,6 +168,13 @@ section {  padding: 0 15px;}
 .currenci:nth-child(3), .currenci:nth-child(6),.currenci:nth-child(9){  margin-right: 0px;}
 .links-item {  width: 50%;  margin-bottom: 17px;}
 .links-wrap {  -webkit-flex-wrap: wrap;  -ms-flex-wrap: wrap;  flex-wrap: wrap;}
+.currenci {width: 55px}
+.integration {  padding-bottom: 165px;}
+.integration-text a {  margin: 25px auto 0;}
+.checkout-solution h2 {  text-align: center;}
+.checkout-text h2::after {  margin: 19px auto 0;}
+
+
 
 }
 @media only screen and (max-width : 375px) {
